--- a/Q5.ipynb
+++ b/Q5.ipynb
@@ -11,7 +11,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.99999999]\n",
+      "Eta_0 9.5367431640625e-07\n",
+      "solution:  [[-0.99999999]\n",
       " [-0.99999999]\n",
       " [-0.99999999]\n",
       " [-0.99999999]\n",
@@ -45,9 +46,11 @@
     "\n",
     "def check_eta_0(x_0, eta_0):\n",
     "    step = np.zeros(x_0.shape)\n",
+    "    H = np.zeros((len(x_0), len(x_0)))\n",
     "    for i in range(len(step)):\n",
     "        step[i] = eta_0  / (1 / (1 + x_0[i])**2 - 1 / (1 - x_0[i])**2 + 10e-4)\n",
-    "    norm = np.linalg.norm(step)\n",
+    "        H[i,i] = 1 / ((1 + x_0[i])**2 - 1 / (1 - x_0[i])**2 + 10e-4)\n",
+    "    norm = np.sqrt(step.T@H@step)\n",
     "    return norm<=1/6\n",
     "\n",
     "def IPM(x_0, eta_0, eps):\n",
@@ -69,8 +72,8 @@
     "    while not check_eta:\n",
     "        eta_0 /= 2\n",
     "        check_eta = check_eta_0(x_0, eta_0)\n",
-    "    print(IPM(x_0, eta_0, 10e-6))\n",
-    "\n"
+    "    print(\"Eta_0\", eta_0)\n",
+    "    print(\"solution: \", IPM(x_0, eta_0, 10e-6))"
    ]
   }
  ],
